# resolve-rs

./: Cargo.toml  README.md  query_packet.txt  response_packet.txt
src/: handlers.rs  main.rs  record.rs  telemetry.rs
src/api/: api.rs
src/buf/: buf.rs  mod.rs
src/record/: header.rs  mod.rs  packet.rs  question.rs  record.rs  result.rs
src/resolver/: resolver.rs
